eagle_test/error/dict_error.eagle
var d = {1: 2, 3: 4};
print d[5];
// expected: [RuntimeError at line 2] Dict does not have key: 5
d[d] = 1;
// expected: [RuntimeError at line 4] Dict can not contain itself.
d[1] = d;
// expected: [RuntimeError at line 6] Dict can not contain itself.
d.put(d, d);
// expected: [RuntimeError at line 8] Dict can not contain itself.